Fix scroll bar on root element
Fixed scrollbar on root element by adding styles to main and overflow children

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@ input:invalid:not(:placeholder-shown) {
   opacity: 0.5;
 }
 
-body {
+/* body {
   min-height: 100vh;
-} 
+}  */
